--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -427,6 +427,40 @@
 
       <div class="row-divider"></div>
 
+  
+      <!-- CONTACT SECTION -->
+      <div class="row row-settings row-contact row-select-daddy">
+
+        <div class="row-title">
+          <div data-lid="s_contact_title" class="row-title-text">Informations de contact</div>
+          <i class="icon icon-edit icon-pencil right"></i>
+        </div>
+
+        <div class="row-subtitle">
+          <div data-lid="s_contact_subtitle" class="row-subtitle-text etiquette">
+            Addresse de messagerie
+          </div>
+        </div>
+
+        <div class="row-body">
+
+        <div class="row-divider"></div>
+
+          <div class="row-input row-input-lg row-contact-email etiquette">
+            <label data-lid="s_contact_email_label" class="label label-lg"for="email_contact">Email</label>
+              <input type="text" id="email_contact"/ placeholder="Where are you?" >
+             <div data-lid="s_contact_email_desc" class="row-select-description etiquette">
+              Indiquez nous l'email sur lequel vous souhaitez être contactés
+             </div>
+          </div>
+
+          <div class="row-buttons">
+            <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+            <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
+          </div>
+
+        </div>
+      </div>
 
       <!-- NEWS SECTION -->
       <div class="row row-settings row-news row-select-daddy">
