--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
+  <link rel="stylesheet" href="/css/intro.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
@@ -548,7 +549,7 @@
              </div>
           </div>
 
-          <div class="row-input row-input-lg row-min-frequency etiquette">
+          <div class="row-input row-input-lg row-min-frequency nonei etiquette">
             <label data-lid="s_min_frequency_label" class="label label-lg"for="">1 mail max toutes les...</label>
             <div class="row-select-wrap">
               <div data-lid="s_0min"    class="row-select min-frequency"  data-propid="min_frequency" data-selectid="0">    Aucune limite</div>
