--- a/public/css/search.css
+++ b/public/css/search.css
@@ -18,18 +18,14 @@
    border-radius: 2px 2px 0 0;
 }
 .event-preview {
-    
-display: flex;
-    
-float: left;
-    
-align-items: center;
+    display: flex;
+    float: left;
+    align-items: center;
 }
 .event-preview div {
     margin-right: 6px;
 }
-.party-preview {
-height: 69px;display: flex;align-content: center;}
+.party-preview {height: 69px;display: flex;align-content: center;justify-content: space-around;float: right;}
 
 .fb-overlay {
    width: 100%;
