--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1255,6 +1255,7 @@ body > header > h5 {
    text-transform: uppercase;
    font-size: 11px;
    min-width: 90px;
+   align-items: center;
 }
 
 .btn-cancel {
