--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  <title>Meefore | Home </title>
+  <title>Dev Meefore | Home </title>
 
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Londrina+Solid' rel='stylesheet' type='text/css'>
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
+  <link rel="stylesheet" href="/css/intro.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
@@ -427,6 +428,40 @@
 
       <div class="row-divider"></div>
 
+  
+      <!-- CONTACT SECTION -->
+      <div class="row row-settings row-contact row-select-daddy">
+
+        <div class="row-title">
+          <div data-lid="s_contact_title" class="row-title-text">Informations de contact</div>
+          <i class="icon icon-edit icon-pencil right"></i>
+        </div>
+
+        <div class="row-subtitle">
+          <div data-lid="s_contact_subtitle" class="row-subtitle-text etiquette">
+            Addresse de messagerie
+          </div>
+        </div>
+
+        <div class="row-body">
+
+        <div class="row-divider"></div>
+
+          <div class="row-input row-input-lg row-contact-email etiquette">
+            <label data-lid="s_contact_email_label" class="label label-lg"for="email_contact">Email</label>
+              <input type="text" id="email_contact"/ placeholder="Where are you?" >
+             <div data-lid="s_contact_email_desc" class="row-select-description etiquette">
+              Indiquez nous l'email sur lequel vous souhaitez être contactés
+             </div>
+          </div>
+
+          <div class="row-buttons">
+            <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
+            <button data-lid="p_button_cancel" class="theme-btn btn-cancel">Annuler</button>
+          </div>
+
+        </div>
+      </div>
 
       <!-- NEWS SECTION -->
       <div class="row row-settings row-news row-select-daddy">
@@ -514,11 +549,11 @@
              </div>
           </div>
 
-          <div class="row-input row-input-lg row-min-frequency etiquette">
+          <div class="row-input row-input-lg row-min-frequency nonei etiquette">
             <label data-lid="s_min_frequency_label" class="label label-lg"for="">1 mail max toutes les...</label>
             <div class="row-select-wrap">
               <div data-lid="s_0min"    class="row-select min-frequency"  data-propid="min_frequency" data-selectid="0">    Aucune limite</div>
-              <div data-lid="s_15min"   class="row-select min-frequency"  data-propid="min_frequency" data-selectid="10">  Aucune limite</div>
+              <div data-lid="s_15min"   class="row-select min-frequency"  data-propid="min_frequency" data-selectid="900">  Aucune limite</div>
               <div data-lid="s_60min"   class="row-select min-frequency"  data-propid="min_frequency" data-selectid="3600"> Aucune limite</div>
               <div data-lid="s_360min"  class="row-select min-frequency"  data-propid="min_frequency" data-selectid="21600">Aucune limite</div>
               <div data-lid="s_720min"  class="row-select min-frequency"  data-propid="min_frequency" data-selectid="43200">Aucune limite</div>
