--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -586,7 +586,7 @@
 
         <div class="row-body">
 
-        <div class="row-divider"></div>
+          <div class="row-divider"></div>
 
           <div class="row-input row-input-lg row-autologin etiquette">
             <label data-lid="s_autologin_label" class="label label-lg"for="">Auto login</label>
@@ -598,7 +598,6 @@
               Activez cette option pour skipper la page d'accueil
             </div>
           </div>
-        </div>
 
          <div class="row-input row-input-lg row-message-readby etiquette">
             <label data-lid="s_message_readby_label" class="label label-lg"for="">Signaler message lu</label>
@@ -609,7 +608,7 @@
             <div data-lid="s_message_readby_desc" class="row-select-description etiquette">
               Activez cette option pour signaler aux autres lorsque vous avez lu les messages
             </div>
-          </div>
+        </div>
 
         <div class="row-buttons">
           <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
@@ -617,6 +616,10 @@
         </div>
 
         </div>
+      </div>
+  
+      <!-- DEL PROFILE SECTION -->
+      <button data-lidd="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
       </div>
 
     </section>
@@ -669,7 +672,6 @@
   <script src="js/src/events/lj-events-map.js"></script>
   <script src="js/src/party/lj-party.js"></script>
   <script src="js/src/typeaheads/lj-typeaheads.js"></script>
-  <script src="js/src/tour/lj-tour.js"></script>
   <script src="js/src/landing/lj-landing.js"></script>
   <script src="js/src/ladder/lj-ladder.js"></script>
   <script src="js/src/ui/lj-ui.js"></script>
