--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -18,27 +18,17 @@
   <link href='https://fonts.googleapis.com/css?family=Pacifico:400,500,600,700' rel='stylesheet' type='text/css'>
   
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/joyride.css">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jscrollpane.css">
   <link rel="stylesheet" href="/css/fontello/css/fontello.css">
   <link rel="stylesheet" href="/css/flags/css/flag-icon.min.css">
   <link rel="stylesheet" href="/css/hint.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/landing.css">
-  <link rel="stylesheet" href="/css/profile.css">
-  <link rel="stylesheet" href="/css/events.css">
-  <link rel="stylesheet" href="/css/create.css">
-  <link rel="stylesheet" href="/css/search.css">
-  <link rel="stylesheet" href="/css/chat.css">
-  <link rel="stylesheet" href="/css/media.css">
-  <link rel="stylesheet" href="/css/admin.css">
-  <link rel="stylesheet" href="/css/modal.css">
-  <link rel="stylesheet" href="/css/intro.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
   <link rel="stylesheet" href="/css/bxslider/jquery.bxslider.css">
+
+  <link rel="stylesheet" href="dist/style.min.css">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -586,7 +576,7 @@
 
         <div class="row-body">
 
-        <div class="row-divider"></div>
+          <div class="row-divider"></div>
 
           <div class="row-input row-input-lg row-autologin etiquette">
             <label data-lid="s_autologin_label" class="label label-lg"for="">Auto login</label>
@@ -598,7 +588,6 @@
               Activez cette option pour skipper la page d'accueil
             </div>
           </div>
-        </div>
 
          <div class="row-input row-input-lg row-message-readby etiquette">
             <label data-lid="s_message_readby_label" class="label label-lg"for="">Signaler message lu</label>
@@ -609,7 +598,7 @@
             <div data-lid="s_message_readby_desc" class="row-select-description etiquette">
               Activez cette option pour signaler aux autres lorsque vous avez lu les messages
             </div>
-          </div>
+        </div>
 
         <div class="row-buttons">
           <button data-lid="p_button_validate" class="theme-btn btn-validate">Valider</button>
@@ -618,75 +607,27 @@
 
         </div>
       </div>
+  
+      <!-- DEL PROFILE SECTION -->
+      <button data-lidd="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
+      </div>
 
     </section>
 
   </div>
-  
 
-  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
-  <script src="js/lib/lodash.js"></script>
-  <script src="js/lib/mousetrap.js"></script>
-  <script src="js/lib/jquery.js"></script>
-  <script src="js/lib/pikaday.js"></script>
-  <script src="js/lib/joyride.js"></script>
-  <script src="js/lib/jscrollpane.js"></script>
-  <script src="js/lib/jquery.cloudinary.js"></script>
-  <script src="js/lib/jquery.typeahead.js"></script>
-  <script src="js/lib/typed.js"></script>
-  <script src="js/lib/waitForImages.min.js"></script>
-  <script src="js/lib/velocity.min.js"></script>
-  <script src="js/lib/velocityui.min.js"></script>
-  <script src="js/lib/moment.min.js"></script>
-  <script src="js/lib/jscrollpane.mousewheel.js"></script>
-  <script src="js/lib/momentwithlocale.min.js"></script>
-  <script src="js/lib/rangeslider.js"></script>
-  <script src="js/lib/async.min.js"></script>
-  <!-- <script src="js/lib/prefixfree.min.js"></script> -->
-  <script src="js/lib/md5.min.js"></script>
-  <script src="js/lib/jquery.bxslider.js"></script>
+  <script src="//js.pusher.com/3.0/pusher.min.js"></script>
+
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
-  <!-- custom scripts -->
-  <script src="js/src/lj-params.js"></script>
-  <script src="js/src/router/lj-router.js"></script>
-  <script src="js/src/languages/lj-textsource.js"></script>
-  <script src="js/src/lj-helpers.js"></script>
-  <script src="js/src/tpl/lj-render-profile.js"></script>
-  <script src="js/src/tpl/lj-render-landing.js"></script>
-  <script src="js/src/tpl/lj-render-user-profile.js"></script>
-  <script src="js/src/tpl/lj-render-create.js"></script>
-  <script src="js/src/tpl/lj-render-event.js"></script>
-  <script src="js/src/tpl/lj-render-typeahead.js"></script>
-  <script src="js/src/lj-domEvents.js"></script>
-  <script src="js/src/events/lj-events-chat.js"></script>
-  <script src="js/src/events/lj-events-settings.js"></script>
-  <script src="js/src/events/lj-events-groups.js"></script>
-  <script src="js/src/events/lj-events-filters.js"></script>
-  <script src="js/src/events/lj-events-preview.js"></script>
-  <script src="js/src/events/lj-events-tabview.js"></script>
-  <script src="js/src/events/lj-events-create.js"></script>
-  <script src="js/src/events/lj-events-map.js"></script>
-  <script src="js/src/party/lj-party.js"></script>
-  <script src="js/src/typeaheads/lj-typeaheads.js"></script>
-  <script src="js/src/tour/lj-tour.js"></script>
-  <script src="js/src/landing/lj-landing.js"></script>
-  <script src="js/src/ladder/lj-ladder.js"></script>
-  <script src="js/src/ui/lj-ui.js"></script>
-  <script src="js/src/profile/lj-profile.js"></script>
-  <script src="js/src/settings/lj-settings.js"></script>
-  <script src="js/src/pusher/lj-pusher.js"></script>
-  <script src="js/src/errors/lj-errors.js"></script>
-  <script src="js/src/languages/lj-country.js"></script>
-  <script src="js/src/languages/lj-languages.js"></script>
-  <script src="js/src/analytics/lj-analytics.js"></script>
-  <script src="js/src/intro/lj-intro.js"></script>
-  <script src="js/src/init/lj-init.js"></script>
-  <script src="js/src/lj-junk.js"></script>
+  <script src="dist/lib.js"></script>
+  
+  <script src="dist/lj.js"></script>
 
 </body>
 
 </html>
+
   
  <script id="app_ids"> 
      window.facebook_app_id = "1509405206012202";
