--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -620,9 +620,9 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
-  <script src="dist/lib.js"></script>
-  
-  <script src="dist/lj.js"></script>
+  <script src="dist/lib.min.js"></script>
+
+  <script src="dist/lj.min.js"></script>
 
 </body>
 
