fixed forEach call on undefined

--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -638,15 +638,13 @@
   <script src="js/lib/jquery.typeahead.js"></script>
   <script src="js/lib/typed.js"></script>
   <script src="js/lib/waitForImages.min.js"></script>
-  <script src="js/lib/velocity.min.js"></script>
+  <script src="js/lib/velocity.js"></script>
   <script src="js/lib/velocityui.min.js"></script>
   <script src="js/lib/moment.min.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
   <script src="js/lib/rangeslider.js"></script>
   <script src="js/lib/async.min.js"></script>
-  <!-- <script src="js/lib/prefixfree.min.js"></script> -->
-  <script src="js/lib/md5.min.js"></script>
   <script src="js/lib/jquery.bxslider.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
