--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -638,7 +638,7 @@
   <script src="js/lib/jquery.typeahead.js"></script>
   <script src="js/lib/typed.js"></script>
   <script src="js/lib/waitForImages.min.js"></script>
-  <script src="js/lib/velocity.min.js"></script>
+  <script src="js/lib/velocity.js"></script>
   <script src="js/lib/velocityui.min.js"></script>
   <script src="js/lib/moment.min.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
