omg le outerHTML bug trad

--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -619,7 +619,7 @@
       </div>
   
       <!-- DEL PROFILE SECTION -->
-      <button data-lidd="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
+      <button data-lid="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
       </div>
 
     </section>
