omg le outerHTML bug trad

--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -617,7 +617,10 @@
       </div>
   
       <!-- DEL PROFILE SECTION -->
-      <button data-lid="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
+      <div class="row-button-delete">
+        <button data-lid="s_delete_profile_btn" id="delete-profile" class="theme-btn">Supprimer mon profil</button>
+      </div>
+
       </div>
 
     </section>
