--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -156,3 +156,9 @@ label.lighter {
     font-family: 'Londrina solid';
     font-size: 25px;
 }
+
+.modal-title-facebook {
+    margin-bottom: 20px;
+    font-size: 22px;
+    color: #555;
+}
