--- a/public/css/events.css
+++ b/public/css/events.css
@@ -80,13 +80,13 @@ i.icon-create {
 .row-events-preview,
 .row-party-preview {
     vertical-align: top;
-    background: rgba(255, 255, 255, 0.55);
+    background: rgba(255, 255, 255, 0.6);
     position: absolute;
     top: 121px;
     z-index: 1;
     box-sizing: border-box;
     padding: 15px;
-    border-bottom: 1px solid #E4E4E4;
+    border-bottom: 1px solid #EDEDED;
     min-height: 100px;
     opacity: 0;
 }
@@ -119,7 +119,7 @@ i.icon-create {
 }
 .row-events-accepted-tabview,
 .row-events-accepted-inview {
-   background: rgba(255, 255, 255, 0.55);
+   background: rgba(255, 255, 255, 0.6);
    position: fixed;
    bottom: 0;
    height: 50px;
@@ -258,10 +258,10 @@ padding-left: 3px;display: inline-block;font-size: 13px;}
   position: relative;
   text-align: left;
   padding: 15px 50px;
-  background: rgba(255, 255, 255, 0.55);
+  background: rgba(255, 255, 255, 0.6);
   z-index: 1;
   overflow: visible!important;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #EDEDED;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -283,6 +283,7 @@ padding-left: 3px;display: inline-block;font-size: 13px;}
   justify-content: flex-start;
   overflow: hidden;
   box-sizing: border-box;
+  box-shadow: 0 0 12px #E7E7E7;
 }
 
 .filters-location {
