--- a/public/css/search.css
+++ b/public/css/search.css
@@ -16,6 +16,7 @@
    border-bottom: 1px solid #E4E4E4;
    padding: 15px 15px;
    border-radius: 2px 2px 0 0;
+   box-shadow: 0 0 12px #E7E7E7;
 }
 .event-preview {
     display: flex;
