--- a/public/css/events.css
+++ b/public/css/events.css
@@ -150,7 +150,7 @@ i.icon-create {
 }
 .event-preview-hosts,
 .party-preview-hosts {
-   text-align: left;
+   text-align: center;
    flex: 1 0 auto;
 }
 .event-preview-host-picture {
@@ -182,7 +182,7 @@ background-size: cover;
 height: 45px;
 border-radius: 40px;
 background-position: center center;
-background-repeat: no-repeat;margin-left: 50px;}
+background-repeat: no-repeat;}
 
 .party-preview-picture img {border-radius: 30px;text-align: center;}
 
@@ -222,7 +222,7 @@ vertical-align: middle;overflow: hidden;text-overflow: ellipsis;flex: 1 0 auto;}
   display: flex;
   /* flex: 1 0 auto; */
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
 } 
 .party-preview-place-name {*/
   font-size: 14px;
@@ -238,7 +238,7 @@ letter-spacing: -.5px;
 font-size: 14px;
 height: 14px;margin: 2px 10px 2px 0;font-family: 'Karla';
 font-weight: bolder;color: #434343;
-padding-left: 3px;display: inline-block;font-size: 13px;}
+padding-left: 3px;font-size: 13px;text-align: center;}
 .event-preview-hosts-names, .party-preview-place-type {
    font-size: 12px;
    color: #8D8D8D;
@@ -247,7 +247,7 @@ padding-left: 3px;display: inline-block;font-size: 13px;}
    border-radius: 3px;
    line-height: 14px;
    flex: 2 0 0;
-   text-align: left;
+   text-align: center;
 }
 .event-preview-hosts-names{
   display: block;
