--- a/public/css/events.css
+++ b/public/css/events.css
@@ -51,7 +51,7 @@ i.icon-create {
    font-weight: bolder;
    padding: 11px 3px;
    color: #FFFFFF;
-   border: 1px solid #FFFFFF;
+   border: 1px solid #BB5151;
    font-size: 10px;
    cursor: pointer;
    background: #e94f6a;
@@ -66,6 +66,7 @@ i.icon-create {
  }
 .btn-create-event i{
   margin-right: 6px;
+  display: none;
 }
 
 .row-main {
@@ -75,12 +76,13 @@ i.icon-create {
    z-index: 0;
    text-align: center;
    padding-bottom: 0;
-   top: 0; 
+   top: 0;
+   margin: 0;
 }
 .row-events-preview,
 .row-party-preview {
     vertical-align: top;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(235, 235, 235, 0.7);
     position: absolute;
     top: 121px;
     z-index: 1;
@@ -89,6 +91,7 @@ i.icon-create {
     border-bottom: 1px solid #EDEDED;
     min-height: 100px;
     opacity: 0;
+    border-bottom: 1px solid #CACACA;
 }
 .row-events-map {
     width: 100%;
@@ -119,12 +122,12 @@ i.icon-create {
 }
 .row-events-accepted-tabview,
 .row-events-accepted-inview {
-   background: rgba(255, 255, 255, 0.6);
+   background: rgba(235, 235, 235, 0.7);
    position: fixed;
    bottom: 0;
    height: 50px;
    width: 100%;
-   border-top: 1px solid #E0E0E0;
+   border-top: 1px solid #B5B5B5;
    text-align: left;
    padding: 0px 60px;
    z-index: 71;
@@ -258,15 +261,15 @@ padding-left: 3px;font-size: 13px;text-align: center;}
   position: relative;
   text-align: left;
   padding: 15px 50px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(235, 235, 235, 0.7);
   z-index: 1;
   overflow: visible!important;
-  border-bottom: 1px solid #EDEDED;
+  border-bottom: 1px solid #CACACA;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   display: none;
 }
 .row-events-filters-group {
@@ -283,7 +286,10 @@ padding-left: 3px;font-size: 13px;text-align: center;}
   justify-content: flex-start;
   overflow: hidden;
   box-sizing: border-box;
-  box-shadow: 0 0 9px 1px #CECECE;
+  box-shadow: 1px 2px 2px 0px #CECECE;
+  border: 1px solid #D0D0D0;
+  box-shadow: none;
+  margin: 0 10px;
 }
 
 .filters-location {
@@ -303,22 +309,16 @@ width: 450px;
 }
 
 .filter-date-item {
-
-padding: 7px 10px;
-
-font-size: 12px;
-
-margin: 0 3px;
-
-background: #FCFCFC;
-
-border-bottom: 1px solid #E6E6E6;
-
-color: #717171;
-
-cursor: pointer;
-
-transition: all ease-in-out .15s;
+padding: 7px 10px;
+font-size: 12px;
+margin: 0 3px;
+background: #FCFCFC;
+border-bottom: 1px solid #E6E6E6;
+color: #717171;
+cursor: pointer;
+transition: all ease-in-out .15s;
+width: 50px;
+text-align: center;
 }
 
 .filter-date-item:hover {
@@ -331,7 +331,7 @@ transition: all ease-in-out .15s;
 }
 
 .filter-date-item-weekday {
-display: none;
+display: none;
 }
 .filter-date-item-numbday {
   
@@ -351,11 +351,11 @@ transition: all ease-in-out .15s;
 }
 
 .event-filter-label {
-font-weight: bolder;
-font-size: 11px;
-margin: 0 2px;
-text-transform: uppercase;
-flex: 2 0 0;
+font-weight: bolder;
+font-size: 11px;
+margin: 0 2px;
+text-transform: uppercase;
+flex: 2 0 0;
 }
 
 .event-filter-options {
@@ -378,6 +378,7 @@ display: inline-block;}
   width:1px;
   margin: 0 11px;
   /* flex: 1 0 auto; */
+  display: none;
 }
 
 .backtomap {
@@ -463,7 +464,7 @@ background: white;
 color: #530606;box-shadow: 3px -1px 5px -1px #BABABA;
 transform: skewX(20deg);width: 120px;height: 37px;
 white-space: nowrap;
-border-radius: 5px 5px 0 0;top: 0px;}
+border-radius: 5px 5px 0 0;top: 0px;box-shadow: none;border: 1px solid #B3B3B3;}
 
 .event-accepted-tabview.highlight, .event-accepted-tabview.highlight:before  {
 }
@@ -477,7 +478,7 @@ border-radius: 5px 5px 0 0;top: 0px;}
   content: "";
   position: absolute;
   left: -24px;
-  top:0px;
+  top: -1px;
   transform: skewX(-40deg);
   width: 43px;
   box-shadow: none;
@@ -486,6 +487,7 @@ border-radius: 5px 5px 0 0;top: 0px;}
   border-radius: 5px 0 0 0;
   transition: all ease-out .3s;
   box-shadow: none!important;
+  border-right: none;
 }
 
 .event-accepted-tabview .icon {
@@ -626,8 +628,10 @@ transition: all ease-out .4s;
   Events inview 
 */
 .row-preview {
-  display: flex!important;
-  justify-content: flex-end;
+  
+display: flex!important;
+  
+justify-content: flex-end;
 }
 .row-events-accepted-inview {
   height: 425px;
@@ -686,9 +690,13 @@ overflow: hidden;
   height: 88%;
   padding: 10px 10px 10px 10px;
   background: white;
-  border-bottom: 1px solid #eee;
   max-width: 1100px;
   margin: 0 auto;
+  border: 1px solid #D0D0D0;
+  border-bottom: 1px solid white;
+  z-index: 10000000000000000000;
+  position: relative;
+  top: -2px;
 }
 .event-accepted-users-group {
 
@@ -861,10 +869,8 @@ position: absolute;left: 60px;transform: translateY(-50%);top: 50%;cursor: point
 }
 .event-accepted-chat-text {
 max-width: 370px;
-display: inline-block;
-font-size: 13px;
-line-height: 17px;
-font-family: 'Karla';
+display: inline-block;font-size: 13px;
+line-height: 17px;font-family: 'Karla';
 margin-left: 80px;
 margin-right: 0px;
 background: #f5f5f5;
@@ -872,8 +878,7 @@ background: #f5f5f5;
 color: #464646;
 padding: 7px 10px;
 border-radius: 4px;
-position: relative;
-}
+position: relative;letter-spacing: -.2px;}
 
 .event-accepted-chat-text.female {
   /* background: rgb(255, 251, 252); */
@@ -896,6 +901,9 @@ margin-right: 20px;margin-left: 0;}
   text-align: left;
   background: #E94F6A;
   color: white;
+  /* border: 1px solid #EAEAEA; */
+  /* color: black; */
+  /* background: white; */
 }
 .event-accepted-chat-sent-at {
   position: absolute;
@@ -963,30 +971,18 @@ width: 100%;
 }
 
 .event-accepted-chat-typing input {
-
-position: relative;
-
-z-index: 2;
-
-background: #F5F5F5;
-
-padding: 6px 0 4px 10px;
-
-border-bottom: 1px solid #eee;
-
-width: 100%;
-
-color: #525252;
-
-font-family: 'Karla';
-
-font-size: 13px;
-
-transition: all ease-out .3s;
-
-order: 1;
-
-flex-grow: .2;
+position: relative;
+z-index: 2;
+background: #F2F2F2;
+padding: 6px 0 4px 10px;
+border-bottom: 1px solid #cacaca;
+width: 100%;
+color: #000000;
+font-family: 'Karla';
+font-size: 13px;
+transition: all ease-out .3s;
+order: 1;
+flex-grow: .2;
 }
 .event-accepted-chat-typing button {
 
